All working well, got validation going correctly.

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,11 @@
   text-align: center;
 }
 
+.errors {
+  color: red;
+  font-size: 85%;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
